2009-11-11 Chris Allegretta <chrisa@asty.org>
	* winio.c: Large tweaking of cursor and text display based on COLS not COLS - 1, 
	  due to finally understanding that display_string wasn't being called properly
	  when softwrap was enabled.  Fixes Savnnah bug 27603, Return key doesn't scroll 
	  viewport reported by Hannes Schueller.
	* - Fix size_t formatting issues with -pedantic

2009-11-09 Chris Allegretta <chrisa@asty.org>
	* files.c (read_file): - Remove debugging messages from file load.  Fixes
	  Savannah bug 27838.

2009-11-07 Chris Allegretta <chrisa@asty.org>
	* nano.h - Add bogus value at begin of flags enumeration because it
	  causes casesens rcfile option to misbehave, reported by Helmut 
	  Jarausch <jarausch@igpm.rwth-aachen.de>

2009-11-03 Chris Allegretta <chrisa@asty.org>
	* nano.h - Fix comma at end of enumerator list which angers -pedantic.
	* rcfile.c - Add in specific check for UNDOABLE and fix declaration as
	  to what flag it toggles.  Fixes undo mode being able to be called from
	  the rc file, reported by Helmut Jarausch <jarausch@igpm.rwth-aachen.de>

2009-11-03 Mike Frysinger <vapier@gentoo.org>
	* files.c - Move up is_file_writable() to stop implicit definition complaints.

2009-10-27 Chris Allegretta <chrisa@asty.org>
	* browser.c (browser_init): Set column width to something sane when 
	  initializing in a directory with no file entries.  Fixes Savannah
	  bug 24163 found (and initial patch) by Paul Wise.

2009-09-15 Chris Allegretta <chrisa@asty.org>
	* winio.c: Clean up some unused variables from the soft wrapping code.

GNU nano 2.1.11 - 2009.09.14
2009-09-12 Chris Allegretta <chrisa@asty.org>
	* winio.c (edit_update) - properly update edittop when using soft wrapping.
	  Fixes lack of centering for searching for off-screen answers, found by 
	  Hannes <mr_creosote@mutantwatch.de>.

2009-09-03 Chris Allegretta <chrisa@asty.org>
	* global.c (shortcut_init): Fix up/down keys not responding in the file browser,